# timeago

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  QUALITY.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
docs/: PROJECT_BRIEF.md
src/timeago/: __init__.py  core.py  errors.py  parser.py
tests/: __init__.py  test_edge_cases.py  test_errors.py  test_format.py  test_granularity.py  test_parse.py
